@@ -1,3 +1,10 @@
+2009-07-17  Thomas Thurman  <thomas.thurman@collabora.co.uk>
+
+	* matchbox/core/mb-wm-stack.c: If an application has non-application-modal
+	windows stacked above application-modal windows, force the application-modal
+	windows to the top; otherwise the application will appear to have locked up.
+	Fixes NB#115408.
+
 2009-07-16  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
 	Debug macro and hooks to trace window moves and resizes.
